--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <fieldset class="mt-2">
           <label for="second">Enter second String (1 to 100):</label>
           <input v-model="thirdString" id="thirdString" type="text" min="1" max="100">
-          <span id="secondWarning" class="text-danger"></span>
+          <span id="thirdWarning" class="text-danger"></span>
         </fieldset>
 
         <h3 class="mt-2">{{string}}</h3>
